support/global/src/main/kotlin/com/example/mindshare/error/exception/RedisLogOutException.kt
package com.example.mindshare.error.exception

import com.example.mindshare.ErrorCode

class RedisLogOutException(
    val errorCode: ErrorCode,
    val data: Any? = null,
) : RuntimeException(errorCode.message)
